Arterial Pulse completed,Started with Examination of cvs

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -1775,6 +1775,7 @@ Stethograph consists of a corrugated rubber tube with one end sealed and the oth
 \item{What is Periodic breathing ? Give few examples.}
 \end{enumerate}
 %--------}}}
+%--------------------Examination of Arterial Pulse------{{{
 
 															\chapter*{\centering Examination of the Arterial Pulse}
 															\begin{tabular}{p{5in} p{1in}}
@@ -1785,14 +1786,39 @@ Stethograph consists of a corrugated rubber tube with one end sealed and the oth
 	\centering
 	\begin{figure}[H]
 		\begin{subfigure}[t]{.29\textwidth}
-			\includegraphics[scale=.5]{./clinicalPhysioPic/carotidPulse.jpg}
-			\caption*{Carotid Pulse}
+			\includegraphics[height = 5cm, width = 5cm]{./clinicalPhysioPic/carotidPulse.jpg}
+			\subcaption{Examination Of Carotid Pulse}
+			\label{carotidPulse}
 		\end{subfigure}
 		\hspace{\fill}
-		\begin{subfigure}[t]{.59\textwidth}
-			\includegraphics[scale=1]{./clinicalPhysioPic/radialPulse.jpg}
-			\caption*{Radial Pulse}
+		\begin{subfigure}[t]{.29\textwidth}
+			\includegraphics[height = 5cm, width = 5cm]{./clinicalPhysioPic/radialPulse_1.jpg}
+			\subcaption{Examination Of Radial Pulse}
 		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.29\textwidth}
+			\includegraphics[height= 5cm, width = 5cm]{./clinicalPhysioPic/collapsingPulse.jpg}
+			\subcaption{Examination Of Collapsing Pulse}
+			\label{collapsingPulse}
+		\end{subfigure}
+		\begin{subfigure}[t]{.29\textwidth}
+			\includegraphics[height=5cm, width=5cm]{./clinicalPhysioPic/radioFemoralDelay.jpg}
+			\subcaption{Examination Of Radio Femoral Delay}
+			\label{radioFemoralDelay}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.29\textwidth}
+			\includegraphics[height=5cm, width=5cm]{./clinicalPhysioPic/posteriorTibial.jpg}
+			\subcaption{Examination Of Posterior Tibial Artery}
+			\label{posteriorTibial}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.29\textwidth}
+			\includegraphics[height=5cm,width=5cm]{./clinicalPhysioPic/dorsalisPedis.jpg}
+			\subcaption{Examination Of Dorsalis Pedis Artery}
+			\label{dorsalisPedis}
+		\end{subfigure}
+		
 		\caption*{Examination Of Arterial Pulses}
 		\label{arterialPulses}
 	\end{figure}
@@ -1851,6 +1877,15 @@ When the interval between the pulse wave is constant, the pulse is said to be re
 \end{enumerate}
 
 \section*{Examination of other peripheral pulses.}
+\addfig{%
+	\centering
+	\begin{figure}[H]
+		\includegraphics[width = 15cm, height = 15cm]{./clinicalPhysioPic/jvp.jpg}
+		\caption*{Examination Of Jugular Venous Pulse \& Measurement of Jugular Venous Pressure}
+		\label{jvp}
+	\end{figure}
+	}
+
 
 \par
 \subsection*{\textbf{Radial pulse :}} Palpated against the radial styloid process.  Radial pulse is examined for Rate, Rhythm and Volume Hold the subjects right arm in the semi prone position with slight flexion at the wrist. The radial pulse is palpated using the right index, middle and ring fingers by gently compressing the artery against the radial styloid process. Count for one full minute.
@@ -1898,6 +1933,12 @@ Measurement of venous waves in the neck helps to determine the right atrial hich
 \item{What is pulsus paradoxus?}
 \item{What are the waves seen in JVP?}
 \end{enumerate}
+%-------------------------------------------------------------}}}
+															\chapter*{\centering Examination Of Cardiovascular System}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+
 											    \end{document}
 
 											    
