Effect of exercise and posture on BP, Measurement of BP with figures completed

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -1971,6 +1971,7 @@ Precordium is the anterior aspect of the chest wall overlying the heart. Examina
 \subsection*{Palpation}
 
 \emph{( Refer Respiratory system for inspection and palpation of Tracheal position)}
+\begin{itemize}
 \item{Confirm the tracheal position}
 \item{Confirm the apical impulse}
 \item{Palpate for any thrill}
@@ -2002,6 +2003,7 @@ Precordium is the anterior aspect of the chest wall overlying the heart. Examina
 	\par
 The ulnar border of the palm is kept along the left parasternal border vertically. A definite sustained lift felt for a while is which is called Parasternal heave. It is caused by Right ventricular hypertrophy.
 }
+\end{itemize}
 \section*{Percussion:}
 \par
 Follow the rules of percussion as explained in respiratory system 
@@ -2017,8 +2019,8 @@ Start percussion from the midaxillary line in the intercostals space where apica
 \end{itemize}
 \section*{Auscultation:}
 \addfig{%
-	\centering
 	\begin{figure}
+	\centering
 		\includegraphics[width=10cm,height=15cm]{./clinicalPhysioPic/auscultatingAreas.jpg}
 		\caption*{Auscultating Areas}
 		\label{auscultatingAreas}
@@ -2055,14 +2057,34 @@ The second heart sound may be split. Split S2 is better appreciated in thin indi
 \item{What is pericardial effusion?}
 	      \end{enumerate}
 	      %--------------------------}}}
+	      %------------Recording of blood pressure ------{{{
 															\chapter*{\centering Recording of Blood Pressure}
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
-															Definition:
+															\section*{Definition:}
 
 															Blood pressure is the lateral pressure exerted by the column of  blood on the walls of the arteries.
 															\section*{Aim:}
+															\addfig{%
+																\centering
+																\begin{figure}[H]
+																	\begin{subfigure}[t]{.4\textwidth}
+																	\includegraphics[width=6cm,height=6cm]{./clinicalPhysioPic/mercury_manometer.jpg}
+	\subcaption{Mercury Sphygmomanometer}
+																	\label{mercury_manometer}
+																\end{subfigure}
+																	\hspace{\fill}
+																	\begin{subfigure}[t]{.4\textwidth}
+																	\includegraphics[width=6cm,height=6cm]{./clinicalPhysioPic/aneroid_manometer.jpg}
+	\subcaption{Aneroid Sphygmomanometer}
+																	\label{aneroid_manometer}
+																\end{subfigure}
+																\caption*{Types Of Sphygmomanometer}
+																\label{Sphygmomanometer}
+																\end{figure}
+																}
+																
 To record the blood pressure of the given subject at rest.
 \section*{Apparatus required :}
 Sphygmomanometer and Stethoscope.
@@ -2094,15 +2116,89 @@ Palpatory method has to be done prior to auscultatory method because,
 It gives a rough value of systolic blood pressure, It helps to avoid missing of \emph{Auscultatory gap.}
 \section*{Observations}
 \begin{table}[H]
-	\begin{tabular}{|p{2in}|p{2in}|p{2in}|p{2in}|p{2in}|}
+
+		\setlength\extrarowheight{10pt}
+	\begin{tabular}{|p{1.1in}|p{1.1in}|p{1.1in}|p{1.1in}|p{1.1in}|}
 		\hline
-		\begin{tabular}[c]{@{}c@{}}Systolic\\ BP by palpatory method (mmHg)\end{tabular} & \begin{tabular}[c]{@{}c@{}}Systolic\\ BP by auscultatory method (mmHg)\end{tabular} & \begin{tabular}[c]{@{}c@{}}Diastolic\\ BP by auscultatory method (mmHg)\end{tabular} & \begin{tabular}[c]{@{}c@{}}Pulse pressure[PP] (SBP-DBP) mmHg\end{tabular} & \begin{tabular}[c]{@{}c@{}}Mean arterial pressure (DBP+$\frac{1}{3}$PP) mmHg\end{tabular} \\ \hline
-			                                                                                 &                                                                                     &                                                                                      &                                                                           &                                                                                     \\ \hline
-													                                                                                  &                                                                                     &                                                                                      &                                                                           &                                                                                     \\ \hline
-																							                                                                                   &                                                                                     &                                                                                      &                                                                           &                                                                                     \\ \hline
-																																	                                                                                    &                                                                                     &                                                                                      &                                                                           &                                                                                     \\ \hline
+		Systolic BP by palpatory method ($mm$Hg) & Systolic BP by auscultatory method ($mm$Hg) & Diastolic BP by auscultatory method ($mm$ Hg) & Pulse pressure (SBP-DBP) ($mm$ Hg) & Mean arterial pressure (DBP+${\frac{1}{3}}$ Pulse Pressure) ($mm$ Hg) \\ \hline
+			                                         &                                             &                                               &                                                                              &                                                                                                               \\ \hline
+								                                          &                                             &                                               &                                                                              &                                                                                                               \\ \hline
+													                                           &                                             &                                               &                                                                              &                                                                                                               \\ \hline
 	\end{tabular}
 \end{table}
+%-----------------------}}}
+%------------Effect of posture and exercise on BP--{{{
+															\chapter*{\centering Effects of Posture and Exercise on	Blood Pressure}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+\section*{Aim:}
+	To record the effects of changes in posture and physical exercise on blood pressure.
+	\section*{Apparatus required :}
+	Sphygmomanometer and stethoscope
+	\section*{Effect Of Changes In Posture On Blood Pressure}
+	\subsection*{Procedure:}
+	\begin{itemize}
+\item{The subject should be mentally and physically relaxed.}
+\item{Record resting blood pressure of the subject in supine posture by palpatory and ausculatory method.}
+\item{The deflated cuff is still wrapped around his arm.}
+\item{Now the subject is instructed to stand up swiftly from the lying posture and to lean against a support (the couch).}
+\item{Immediately record his blood pressure by auscultatory method.}
+\item{Record blood pressure again at the end of 2min and 5min on standing.}
+	\end{itemize}
+	\subsection*{Discussion:}
+		When an individual stands up immediately from recumbent posture, there is pooling of blood in the legs.
+		The venous return to the heart is reduced thereby reducing the cardiac output. Hence, the systolic blood pressure will fall, which may be recorded within 15seconds. This will be brought back to normal by Baroreceptor reflex within 15 to 30 seconds .Hence, a fall in systolic BP is usually difficult to record in normal subjects.
+		This is a function of autonomic nervous system (ANS).
+		\subsection*{Observation - Effect Of Change in Posture on BP}
+\begin{table}[H]
+	\setlength\extrarowheight{15pt}
+\begin{tabular}{|p{1.2in}|p{1.2in}|p{1.2in}|p{1.2in}|}
+	\hline
+	Posture                                                           & Systolic BP by palpatory method ($mm$Hg) & Systolic BP by auscultatory method ($mm$ Hg) & Diastolic BP by auscultatory method ($mm$ Hg) \\ \hline
+	Supine                                                            &                                          &                                              &                                               \\ \hline
+	\begin{tabular}[c]{@{}l@{}}Immediately\\ on standing\end{tabular} & Not to be done                           &                                              &                                               \\ \hline
+		2 min                                                             & Not to be done                           &                                              &                                               \\ \hline
+		5 min                                                             & Not to be done                           &                                              &                                               \\ \hline
+\end{tabular}
+\end{table}
+	\section*{Effect Of Exercise On Blood Pressure}
+\subsection*{Procedure:}
+\begin{itemize}
+\item{Record resting blood pressure in sitting posture by palpatory and ausculatory method.}
+\item{The Riva Rocci cuff is disconnected from the BP apparatus.}
+\item{The cuff is still wrapped around the subject’s arm.}
+\item{The subject is instructed to perform physical activities like on the spot jogging for five minutes or ten sit ups}
+\item{Immediately after the exercise, BP is recorded by auscultaory method without any time delay.}
+\end{itemize}
+
+\subsection*{Discussion:}
+Systolic BP will show a rise due to increase in the heart rate and cardiac output. This is due to increased activity of sympathetic nervous system .Diastolic BP will not change in mild to moderate exercise. In severe exercise, diastolic BP may fall due to local vasodilatation in working muscles which will decrease the peripheral resistance.
+
+\subsection*{Observation - Effect Of Exercise On Blood Pressure}
+\begin{table}[H]
+	\setlength\extrarowheight{25pt}
+	\begin{tabular}{|p{1.2in}|p{1.2in}|p{1.2in}|p{1.2in}|}
+		\hline
+		                                                                     & Systolic BP by palpatory method ($mm$Hg) & Systolic BP by auscultatory method ($mm$ Hg) & Diastolic BP by auscultatory method ($mm$ Hg) \\ \hline
+
+										     BP at rest                                                           &                                          &                                              &                                               \\ \hline
+										     \begin{tabular}[c]{@{}l@{}}Immediately\\ after exercise\end{tabular} & Not to be done                           &                                              &                                               \\ \hline
+											     2 min after exercise                                                 & Not to be done                           &                                              &                                               \\ \hline
+											     5 min after exercise                                                 & Not to be done                           &                                              &                                               \\ \hline
+	\end{tabular}
+\end{table}
+\section*{Questions:}
+\begin{enumerate}
+\item{Define Blood pressure.}
+\item{What is pulse pressure ?}
+\item{How will you calculate Mean arterial pressure.?}
+\item{What is the importance of palpatory method ?}
+\item{What is an auscultatory gap?}
+\item{What are korotkoff’s sounds?}
+\item{What is postural hypotension?}
+\end{enumerate}
+%----------}}}
 	\end{document}
 
 
