Sensory system partial

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -2199,6 +2199,63 @@ Systolic BP will show a rise due to increase in the heart rate and cardiac outpu
 \item{What is postural hypotension?}
 \end{enumerate}
 %----------}}}
+
+															\chapter*{\centering Examination Of Sensory System}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+															\section*{Pre-requisites for the examination}
+															\par									Before starting the procedure explain the nature of the test to be performed. Ask the subject to close the eyes or turn the face to the other side whenever necessary.
+															\par
+Apply uniform sensory stimulus and examine dermatome wise on both sides.
+\paragraph{Following sensations are tested}
+\begin{itemize}
+\item{Tactile sensation - light touch, crude touch, tactile localisation and 	discrimination}
+\item{Position sense:}
+\item{Vibration sense}
+\item{Pain – superficial and deep}
+\item{Temperature sense- warmth and cold}
+\item{Stereognosis:}
+\item{Romberg’s sign}
+\end{itemize}
+\subsection*{TACTILE SENSATION: (Tested with eyes closed)}
+\subsubsection*{Fine touch (Light touch):}
+\begin{itemize}
+\item{ Ask the subject to say ‘yes’ or raise his finger when he perceives the sensation of touch.}
+\item{ With a wisp of cotton wool, lightly touch the different parts of the body and compare with the corresponding area on the opposite side dermatome wise}
+\item{ Also enquire whether he perceives it normally or differently.}
+\item{ It can also be elicited by Von frey’s hair aesthesiometer.}
+\end{itemize}
+
+\subsubsection*{Crude touch (Pressure sense):}
+\begin{itemize}
+\item{Pressure is the sustained touch sensation.}
+\item{Elicit the pressure sensation by pressing with your finger tip on 	corresponding areas of both sides dermatome wise}
+\end{itemize}
+
+\subsubsection*{Tactile localisation:}
+\begin{itemize}
+\item{It is the ability to localise the touch with a ball pen tip.}
+\item{Measure the distance between the two points (localisation distance).  Tested in all dermatomes on both sides.}
+\item{Localisation distance varies in different parts of the body. It corresponds with the density of touch receptors.}
+\end{itemize}
+
+\subsubsection*{Two point discrimination:}
+\begin{itemize}
+\item{Instruction is given to the subject to say whether he feels the touch as one point or two points when he is touched by a compass aesthesiometer}
+\item{Start with minimum distance of 1$mm$, touch the skin of the subject lightly with the two points simultaneously.}
+\item{Ask the subject to say whether he is being touched by one or two points.}
+\item{If the subject says one, increase the distance gradually till two separate points are appreciated by him. This is the minimum separable distance.}
+\item{Record the minimum separable distance on different parts of the body on both the sides.}
+\end{itemize}
+\par
+(Minimum separable distance varies in different parts of the body - about 2$mm$ on finger tips, 5$mm$ on hands and maximum on the back of the trunk which is about 5$cm$. This is due to the difference in distribution of sensory receptive fields.)
+\begin{itemize}
+\item[]Anaesthesia 	– loss of all sensations
+\item[]Hypoaesthesia 	– Reduced touch sensation
+\item[]Hyperaesthesia 	- When the response to the sensory stimulus is exaggerated.  eg.thalamic lesion
+\item[]Paraesthesia 	- Perverted touch sensation (Touch may produce unpleasant 				sensation)
+\end{itemize}
 	\end{document}
 
 
