Sensory system added, pictures to be added

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -2256,6 +2256,97 @@ Apply uniform sensory stimulus and examine dermatome wise on both sides.
 \item[]Hyperaesthesia 	- When the response to the sensory stimulus is exaggerated.  eg.thalamic lesion
 \item[]Paraesthesia 	- Perverted touch sensation (Touch may produce unpleasant 				sensation)
 \end{itemize}
+
+\subsection*{SENSE OF POSITION: (to be done with eyes closed)}
+\par
+The appreciation of passive movement
+\par
+	Hold the finger and fix the interphalangeal joint. Passively flex and extend the finger holding the joint, and leave it in some definite position . Ask the subject to keep the corresponding finger in similar position .Perform the test on all the upper and lower limb small and large.
+	\par
+(Movements of less than 10${^\circ}$ are appreciated at all the normal joints).
+\subsection*{VIBRATION SENSE: (to be done with eyes closed)}
+\begin{itemize}
+\item{over bony prominences like styloid process of the radius ,the lower end of the tibia, and medial or l ateral malleolus.}
+\item{Ask the subject if he perceives vibrations and instruct him to raise his hand when he ceases to feel the vibration.}
+\item{Immediately place tuning fork on the corresponding bony prominence of the examiner. If the examiner can still perceive it, the subject's perception of vibration is impaired.}
+\end{itemize}
+\subsection*{PAIN SENSATION (to be done with eyes open)}
+\subsubsection*{Superficial pain:}
+\begin{itemize}
+\item{Explain the procedure}
+\item{Elicit superficial pain by gently pricking the skin with a pin}
+\item{Ask the subject if he perceives the pain}
+\item{Test pain in all the dermatomes on both sides.}
+\end{itemize}
+\subsubsection*{Deep pain:}
+	Elicit Deep pain by squeezing the deeper structures such as the muscle or the tendon. It can also be quantified using Algometer.
+	\begin{itemize}
+\item{Analgesia is loss of pain sensation}
+\item{Hypoalgesia is partial loss of pain sensibility}
+\item{Hyperalgesia is a condition of exaggerated sensibility to pain}
+	\end{itemize}
+	\subsection*{THERMAL SENSE:}
+	\begin{itemize}
+\item{Take two test tubes containing warm and cold water separately}
+\item{Give proper instructions to the subject (to say whether he feels cold or warm when touched with different glass tubes)}
+\item{Place the bottom of the test tubes on the skin of the subject each ‘in turn or randomly’ and ask the subject to say what he feels}
+\item{Test and compare all the dermatomes.}
+	\end{itemize}
+	\subsection*{STEREOGNOSIS: (to be done with eyes closed)}
+\begin{itemize}
+\item{Place a familiar object in subject’s hand}
+\item{The subject should identify the object by its shape,texture, size, etc and should tell what it is}
+\item{Repeat the procedure with 4 to 5 familiar objects}
+\item{Repeat the procedure in the other hand}
+	\end{itemize}
+	\par
+	Ability to recognize the known objects purely from the feel of its shape and size with eyes closed is called stereognosis.
+	\par
+	Tactile localization, tactile discrimination and stereognosis are known as cortical sensations as intact parietal association area is needed.
+\subsection*{ROMBERG’S SIGN:}
+\par
+	Ask the subject to stand with his feet close together and then to close his eyes. Swaying of the body from side to side will occur if the posterior column is affected. The position sense from the legs is lacking, hence the subject becomes unsteady on closing the eyes.
+	\par
+	This is a test for the loss of position sense (sensory ataxia) in the legs. It is not at a test for cerebellar function. This is a test to differentiate sensory ataxia from cerebellar ataxia. In cerebellar ataxia, the subject is unsteady with his feet together even with eyes open.
+
+	\begin{table}
+\centering
+		\begin{tabular}{|p{1in}|p{1.75in}|p{1.75in}|}
+\hline
+S.No. & \textbf{Senses}                                                                                       & \textbf{Carried by the Tracts}  \\
+\hline
+1     & Fine touch,Tactile localization, Tactile discrimination, position sense, vibration sense and stereognosis & Dorsal/ posterior column       \\
+\hline
+2     & Crudetouch                                                                                            & Anteriorspinothalamic tract    \\
+\hline
+3     & Pain\& Temperature                                                                                    & Lateralspino-thalamic tract    \\
+\hline
+\end{tabular}
+\end{table}
+
+\section*{Inference :}
+\vspace{2in}
+
+
+
+\section*{Questions:}
+\begin{enumerate}
+\item{What is a dermatome?}
+\item{Name the receptors for pain.}
+\item{What are the types of pain?}
+\item{Name the sensations lost in posterior column lesions of the spinalcord.}
+\item{What are cortical sensations?.}
+\item{What are Brodmann’s area numbers for primary and secondary sensory area?}
+\item{What is the frequency of the tuning fork used to test vibration sense?}
+\item{What is astereognosis?}
+\end{enumerate}
+
+\newpage
+\centering \paragraph{Clinical Examination of Sensory System}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Name:}  & \textbf{Age:}\\
+																\textbf{Sex:} & \textbf{Occupation:}
+															\end{tabular}
 	\end{document}
 
 
