Completed Sensory system

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -2199,13 +2199,20 @@ Systolic BP will show a rise due to increase in the heart rate and cardiac outpu
 \item{What is postural hypotension?}
 \end{enumerate}
 %----------}}}
+%-----------------Examination of sensory system----{{{
 
 															\chapter*{\centering Examination Of Sensory System}
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
 															\section*{Pre-requisites for the examination}
-															\par									Before starting the procedure explain the nature of the test to be performed. Ask the subject to close the eyes or turn the face to the other side whenever necessary.
+			\addfig{%
+				\centering
+				\begin{figure}[H]
+					\includegraphics[height=18cm,width=12cm]{./clinicalPhysioPic/sensoryIntruments.jpg}
+					\label{SensoryIntruments}
+				\end{figure}
+				}												\par									Before starting the procedure explain the nature of the test to be performed. Ask the subject to close the eyes or turn the face to the other side whenever necessary.
 															\par
 Apply uniform sensory stimulus and examine dermatome wise on both sides.
 \paragraph{Following sensations are tested}
@@ -2271,6 +2278,40 @@ The appreciation of passive movement
 \item{Immediately place tuning fork on the corresponding bony prominence of the examiner. If the examiner can still perceive it, the subject's perception of vibration is impaired.}
 \end{itemize}
 \subsection*{PAIN SENSATION (to be done with eyes open)}
+\addfig{%
+	\centering
+	\begin{figure}[H]
+		\begin{subfigure}[t]{.43\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/positionSense.jpg}
+			\subcaption{Position Sense}
+			\label{position sense}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.43\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/painSense.jpg}
+			\subcaption{Pain Sense}
+			\label{pain sense}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.43\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/twoPointDiscrimination.jpg}
+			\subcaption{Two Point Discrimination}
+			\label{twoPointDiscrimination}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.43\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/sensorySystem2.jpg}
+			\subcaption{Vibration Sense}
+			\label{vibrationSense}
+		\end{subfigure}
+		\caption*{Sensory System Examination}
+		
+	\end{figure}
+	}
 \subsubsection*{Superficial pain:}
 \begin{itemize}
 \item{Explain the procedure}
@@ -2347,6 +2388,31 @@ S.No. & \textbf{Senses}                                                         
 																\textbf{Name:}  & \textbf{Age:}\\
 																\textbf{Sex:} & \textbf{Occupation:}
 															\end{tabular}
+															% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+% \usepackage{graphicx}
+															\renewcommand{\arraystretch}{2}
+\begin{table}[H]
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{\textbf{Sensation}} & \multicolumn{2}{c|}{\textbf{Cervical}} & \multicolumn{2}{c|}{\textbf{Thoracic}} & \multicolumn{2}{c|}{\textbf{Lumbar}} & \multicolumn{2}{c|}{\textbf{Sacral}} \\ \cline{2-9}
+                                    & \textbf{Right}     & \textbf{Left}     & \textbf{Right}     & \textbf{Left}     & \textbf{Right}    & \textbf{Left}    & \textbf{Right}    & \textbf{Left}    \\ \hline
+Fine touch                          &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Crude touch                         &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Tactile localisation                &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Joint \& Position sense             &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Vibration                           &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Superficial pain                    &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Temperature (warmth)                &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Temperature (cold)                  &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Steregnosis                         &                    &                   &                    &                   &                   &                  &                   &                  \\ \hline
+Romberg's sign                      & \multicolumn{8}{c|}{}                                                                                                                                         \\ \hline
+\end{tabular}%
+}
+\end{table}
+\renewcommand{\arraystretch}{1}
+%------------------------}}}
 	\end{document}
 
 
