Started Motor system

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -21,6 +21,8 @@
 \usepackage{caption}
 \usepackage{array}
 \usepackage{subcaption}
+\parindent=10pt
+\parskip=5pt
 \makeatletter
 \newcommand\@addfig{\relax}
 \newcommand\addfig[1]{\global\long\def\@addfig{#1}}
@@ -2350,7 +2352,7 @@ The appreciation of passive movement
 	\par
 	This is a test for the loss of position sense (sensory ataxia) in the legs. It is not at a test for cerebellar function. This is a test to differentiate sensory ataxia from cerebellar ataxia. In cerebellar ataxia, the subject is unsteady with his feet together even with eyes open.
 
-	\begin{table}
+	\begin{table}[H]
 \centering
 		\begin{tabular}{|p{1in}|p{1.75in}|p{1.75in}|}
 \hline
@@ -2383,7 +2385,7 @@ S.No. & \textbf{Senses}                                                         
 \end{enumerate}
 
 \newpage
-\centering \paragraph{Clinical Examination of Sensory System}
+{\centering \paragraph{Clinical Examination of Sensory System}}
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Name:}  & \textbf{Age:}\\
 																\textbf{Sex:} & \textbf{Occupation:}
@@ -2413,6 +2415,81 @@ Romberg's sign                      & \multicolumn{8}{c|}{}                     
 \end{table}
 \renewcommand{\arraystretch}{1}
 %------------------------}}}
+
+
+															\chapter*{\centering Examination Of Motor System}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+															\section*{Introduction}
+Examination of the motor system is carried out by assessing,
+\begin{itemize}
+\item{Nutrition or bulk of the muscle}
+\item{Tone of the muscle}
+\item{Power or strength of the muscle}
+\item{Co-ordination of movements}
+\item{Reflexes}
+\item{Gait}
+\item{Involuntary movements}
+\end{itemize}
+
+\section*{Nutrition Or Bulk Of The Muscle:}
+\begin{itemize}
+\item{Inspect the different groups of muscles of the body on both sides for any wasting or contractures.}
+\item{Palpate the muscles and feel for the consistency. Atrophic muscle appears smaller and feels soft and flabby. Hypertrophic muscle appears bulky and are firm in consistency.}
+\item{Bulk of the muscle is assessed by measuring the circumference of the limbs at point of maximum bulk with reference to a definite bony landmark using an inch tape.}
+\item{Bony landmarks}
+	\begin{itemize}
+		\item[]Upper limb 	–	Arm circumference with reference to acromian or olecranon 			process. Forearm circumference with reference to olecranon 			process.
+		\item[]Lower limb 	–	Thigh and leg circumference with reference to tibial 				tuberosity. 
+	\end{itemize}
+\item{ Compare the bulk of both limbs at the same reference point.}
+\end{itemize}
+
+\section*{Tone:}
+	Muscle tone is a state of partial contraction of muscle at rest.
+	\begin{itemize}
+\item{Ask the subject to keep the limb relaxed. Hold the limb and do passive movements on various joints and observe the degree of resistance offered by the muscle.}
+\item{The degree of resistance offered by the muscle indicates the tone of the muscle.}
+\item{Compare the tone of the muscles on both sides.}
+	\end{itemize}
+	\par
+	Hypertonia is increase in muscle tone. It is seen in upper motor neuron lesions. It is of two types: spasticity and rigidity.
+	\begin{itemize}
+		\item{\textbf{Spasticity:} Hypertonia of the corticospinal tract lesion is of Clasp knife type and it involves one group of muscles either the agonist or the antagonist muscles. It is maximum in the flexors of the upper limb and extensors of the lower limb.}
+		\item{\textbf{Rigidity:} Hypertonia of the extrapyramidal tracts lesion, involves both the agonist and the antagonist muscles. In Cog wheel rigidity, the resistance offered is intermittent. In Lead pipe rigidity, the resistance is felt throughout the range of movement.}
+	\end{itemize}
+	Hypotonia is decrease in muscle tone. It is seen in lower motor neuron lesions. Eg: Poliomyelitis and cerebellar lesions.
+	\section*{Power Or Strength Of The Muscles:}
+	\begin{itemize}
+\item{Expose the muscle to be tested. Ask the subject to perform the movement as instructed and offer resistance. Observe the contraction of the muscle. Compare strength of same group of muscle on the other side}
+\item{The strength of the muscle is assessed by comparing the  strength of the examiner.}
+	\end{itemize}
+	\subsection*{Grading of power:}
+	\par
+	\begin{align*}
+	Grade 0 	&:	Complete paralysis. \\
+	Grade 1 	&: 	Flicker of contraction only.\\
+	Grade 2 	&: 	Muscle movement only when gravity is eliminated\\
+	Grade 3 	&:	Muscle movement against the force of gravity, but not against resistance. \\
+	Grade 4 	&:	Some degree of weakness, usually described as poor, fair or moderate 		strength. \\
+	Grade 5 	&:	Normal power.\\
+	\end{align*}
+
+
+	\subsection*{Testing muscles of the upper limb:}
+	1. Abductor pollicis brevis:
+	Ask the subject to abduct the thumb against resistance in a plane at right angle to the palmar aspect of the index finger.
+	2. Opponens pollicis:
+	Ask the subject to touch the tip of his little finger with the point of his thumb against resistance without moving the little finger.
+	3. First dorsal interosseous:
+	Ask the subject to abduct his index finger against resistance.
+	4. Interossei and lumbricals: Dorsal interossei:
+	Ask the subject to abduct the fingers against resistance. The dorsal interossei causes the abduction of the fingers at the metacarpophalangeal joint.
+	Palmar interossei:
+	Place the paper between the fingers and ask the subject to hold it. Try to pull the paper out. The palmar interossei causes adduction of the fingers at the metacarpophalangeal joint.
+	Lumbricals:
+	Ask the subject to flex the metacarpophalangeal joints and to extend the distal interphalangeal joints against resistance.
 	\end{document}
 
 
